fix: fix scrollbar for adding widgets page

--- a/src/pages/dashboard/Editor/styles.css
+++ b/src/pages/dashboard/Editor/styles.css
@@ -1,5 +1,4 @@
 .layout-wrapper {
-  min-height: 100vh;
   display: flex;
   gap: 20px;
 }
